# rust-fractx-wasm-demo

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  fractx_wasm_demo.gc.opt.wasm  index.html  master.js  master.js.map  module.js  module.js.map  rollup.config.js  worker.js
resources/: wasm.mime-type.reg
src/js/: master.js  module.js  promise.js  queue.js  tools.js  wasm-helpers.js
src/rust/: lib.rs
static/: index.html  worker.js
