[package]
name = "fractx-wasm-demo"
version = "0.1.1"
authors = ["Rafał Michalski <royaltm75@gmail.com>"]

publish = false

description = "Mandelbrot set WebAssembly demo"
homepage = "https://github.com/royaltm/rust-fractx-wasm-demo"
repository = "https://github.com/royaltm/rust-fractx-wasm-demo.git"
keywords = ["mandelbrot","WebAssembly","wasm"]

readme = "README.md"
license-file = "LICENSE"

[lib]
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]

[dependencies.fractx]
version = "0.2"
git = "https://github.com/royaltm/rust-fractx"
default-features = false
features = []
